# koyila

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  USER_GUIDE.md  build_log.txt  build_log_bridge.txt  build_log_bridge_2.txt  metadata.json  render.yaml  tsconfig.json
.agent/workflows/: build-android.md  sonic-logs.md
.cargo/: config.toml
android-bridge/: Cargo.toml  build_log.txt
android-bridge/src/: lib.rs
android-client/: build_log.txt  build_log_manual_1.txt  build_log_manual_2.txt  build_log_manual_3.txt  build_log_manual_4.txt  build_log_manual_5.txt  build_log_manual_6.txt  build_log_mozilla.txt  build_log_retry.txt  build_log_retry_2.txt  build_log_retry_3.txt  build_log_retry_4.txt  build_log_retry_5.txt  build_log_retry_6.txt  build_log_retry_7.txt  gradle.properties  local.properties  release-key.jks  settings.gradle.kts  sonicsync-release-key.jks
android-client/app/: build.gradle.kts  proguard-rules.pro
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/sonicsync/app/: AudioCaptureService.kt  AudioService.kt  DiscoveryManager.kt  MainActivity.kt  SonicSyncEngine.kt
android-client/app/src/main/res/values/: strings.xml  themes.xml
cli-client/: Cargo.toml
cli-client/src/: main.rs
dashboard/: index.html  index.tsx  package-lock.json  package.json
rust-core/: Cargo.toml
rust-core/src/: clock.rs  lib.rs  messages.rs  pid.rs
server/: Cargo.toml
server/src/: app_state.rs  control.rs  handlers.rs  lib.rs  main.rs  routes.rs  state.rs  stream.rs
