[package]
name = "android-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "sonicsync_bridge"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rust-core = { path = "../rust-core" }
server = { path = "../server" }
uuid = { version = "1.0", features = ["v4"] }
android_logger = "0.13"
log = "0.4"
once_cell = "1.18"
