[package]
name = "cli-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rust-core = { path = "../rust-core" }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
